--- a/main.css
+++ b/main.css
@@ -1,20 +1,25 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #222;
 }
 
 .banner {
   width: 100%;
-  height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("images/boardroom.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: fixed;
+  min-height: 92vh;
 }
 
 .navbar {
   width: 85%;
   margin: auto;
-  padding: 35px 0;
+  padding: 25px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,6 +28,16 @@
 .navbar img {
   width: 48px;
   cursor: pointer;
+  animation: rotator 60s linear infinite;
+}
+
+@keyframes rotator {
+  0% { transform: Rotate(0deg); }
+  20% { transform: Rotate(60deg); }
+  40% { transform: Rotate(120deg); }
+  60% { transform: Rotate(180deg); }
+  80% { transform: Rotate(240deg); }
+  100% { transform: Rotate(300deg); }
 }
 
 .navbar ul li {
@@ -52,64 +67,25 @@
   width: 100%;
 }
 
-.content {
-  text-align: center;
-  width: 100%;
-  position: absolute;
-  top: 35%;
-  color: #fff;
-}
-
-.title {
-  font-size: 70px;
-  line-height: 100px;
-  font-weight: bold;
-  height: 100px;
-  text-align: left;
+footer {
+  background-color: #222;
   display: flex;
-  justify-content: center;
+  width: 100%;
+  padding: 16px 4px;
+  justify-content: flex-end;
+}
+
+.socials {
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
-  overflow: hidden;
+  padding: 0 20px;
 }
 
-.slider {
-  color: green;
-  margin-left: 12px;
-  box-sizing: border-box;
-  animation: slider 6s linear infinite;
+.socials > img {
+  width: 36px;
 }
 
-@keyframes slider {
-  0% {margin-top: -400px;}
-  5% {margin-top: -200px;}
-  30% {margin-top: -200px;}
-  35% {margin-top: 0px;}
-  65% {margin-top: 0px;}
-  70% {margin-top: 200px;}
-  100% {margin-top: 200px;}
-}
-
-.content p {
-  margin: 20px auto;
-  font-weight: 100px;
-  line-height: 20px;
-  font-family: sans-serif;
-}
-
-button {
-  padding: 15px 25px;
-  margin: 20px;
-  font-size: 16px;
-  letter-spacing: 1px;
-  border: 2px solid green;
+.socials > span {
   color: #fff;
-  cursor: pointer;
-  background: linear-gradient(to right, transparent 50%, green 50%);
-  background-size: 200%;
-  background-position: left;
-  transition: background-position 0.5s;
-}
-
-button:hover {
-  background-position: right;
 }
