--- a/main.css
+++ b/main.css
@@ -76,10 +76,15 @@ footer {
 }
 
 .socials {
+  cursor: pointer;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 0 20px;
+}
+
+.socials:hover > span {
+  color: green;
 }
 
 .socials > img {
