--- a/product.css
+++ b/product.css
@@ -47,6 +47,11 @@
   color: #fff;
 }
 
+.desc:hover {
+  border: 2px solid black;
+  color: black;
+}
+
 .packages {
   width: 100%;
   height: 40%;
@@ -56,12 +61,18 @@
 
 .pack {
   height: 100%;
+  cursor: pointer;
   width: 100%;
   padding: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  border: 3px solid transparent;
+}
+
+.pack:hover {
+  border: 3px solid green;
 }
 
 .price {
